# libfreenect

./: .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  HACKING  Makefile  README.asciidoc  README.md  README.mingw_cross  README.txt  cameras.c  cameras.h  config.cmake.in  geninits.py  inits.h  inits.txt  libfreenectConfig.cmake.in  main.c  mingw.cmake
OpenKinect/: KinectMotor.cs
OpenKinectConsole/: OpenKinectConsole.cs
OpenNI2-FreenectDriver/: CMakeLists.txt  README.md
OpenNI2-FreenectDriver/src/: ColorStream.cpp  ColorStream.hpp  DepthStream.cpp  DepthStream.hpp  DeviceDriver.cpp  Utility.hpp  VideoStream.hpp
actionscript/: test_depth.as  test_rgb.as
c/: CMakeLists.txt
c/Dependencies/include/: glut README-win32.txt  md5.sum  stdint.h
c/Dependencies/lib/libusb/dynamic/: libusb_dyn.c
c/Modules/: FindUSB.cmake
c/examples/: CMakeLists.txt  as3-server.c  glview.c  kinect-network.c
c/include/: libfreenect.h
c/lib/: CMakeLists.txt  accelerometers.c  bayer.c  bayer.h  cameras.c  cameras.h  core.c  freenect_internal.h  geninits.py  inits.c  motors.c  tilt.c  usb_libusb10.c  usb_libusb10.h
c/pykinect/: __init__.py
c/python/: README  demo_cv_depth_show.py  demo_cv_rgb_show.py  demo_mp_depth_show.py  demo_mp_rgb_show.py  demo_synch.py  demo_tilt.py  freenect.py
cmake_modules/: ChooseOpenGLTarget.cmake  FindLibJpeg.cmake  FindOpenCV.cmake  FindThreads.cmake  Findlibdc1394.cmake  SetupDirectories.cmake
examples/: CMakeLists.txt  camtest.c  chunkview.c  cpptest.cpp  cppview.cpp  glpclview.c  glview.c  hiview.c  kinect_register.c  micview.c  registration.cpp  regtest.c  regview.c  tiltdemo.c  undistort.c  wavrecord.c
examples/unix/: CMakeLists.txt
examples/win32/: CMakeLists.txt  Freenect-MinimalSample.cpp  glview.c
fakenect/: CMakeLists.txt  README  fakenect-record.1  fakenect.1  fakenect.c  fakenect.sh.in  parson.c  platform.h  record.c
platform/windows/Zephod-CPP-version/: CMakeLists.txt  Kinect-Driver.cpp  Kinect-FrameInput.cpp  Kinect-Utility.cpp  Kinect-Utility.h  Kinect-win32-internal.h  Kinect-win32.cpp  Kinect.sln  Kinect.vcproj  Readme.txt  init.h  libfreenect-win32.cpp  libfreenect.h
platform/windows/Zephod-CPP-version/Drivers/: Xbox_NUI_Audio.cat  Xbox_NUI_Audio.inf  Xbox_NUI_Camera.inf  Xbox_NUI_Motor.inf
platform/windows/Zephod-CPP-version/Freenect-MinimalSample/: Freenect-MinimalSample.cpp  Freenect-MinimalSample.vcproj
platform/windows/Zephod-CPP-version/Kinect-MinimalSample/: Kinect-MinimalSample.cpp  Kinect-MinimalSample.vcproj
platform/windows/Zephod-CPP-version/libusb/: README.txt  libusb-win32-changelog-1.2.2.0.txt
platform/windows/Zephod-CPP-version/libusb/examples/: BenchmarkHelp.txt  benchmark.c  benchmark_rc.rc  bulk.c  driver_installer_template.iss  testbulk_rc.rc
platform/windows/Zephod-CPP-version/libusb/include/: usb.h
proxynect/: CMakeLists.txt  README  proxydaemon.c  proxynect.c  proxynect.h  proxynect.sh.in  proxyutils.c
src/: CMakeLists.txt  accel.c  audio.c  cameras.c  cameras.h  cmos.c  convert.h  core.c  flags.c  freenect_internal.h  freenect_internal_postprocessing.h  fwfetcher.py  inits.c  internal.c  keep_alive.c  libfreenect.pc.in  loader.c  loader.h  postprocessing.c  registration.c  registration.h  tilt.c  usb_libusb10.c  usb_libusb10.h  usb_libusb_win32.c  usb_libusb_win32.h
src/unix/: CMakeLists.txt  freenect_internal.h  tilt.c  usb_libusb10.c
src/win32/: CMakeLists.txt  Kinect-Driver.cpp  Kinect-win32-internal.h  Kinect-win32.cpp  Kinect-win32.h
wrappers/actionscript/: CMakeLists.txt
wrappers/actionscript/org/as3kinect/: as3KinectCalibrationUI.as  as3kinect.as  as3kinectBlobs.as  as3kinectDepth.as  as3kinectMotor.as  as3kinectSocket.as  as3kinectUI.as  as3kinectUtils.as  as3kinectVideo.as  as3kinectWrapper.as  as3kinectWrapperEvent.as
wrappers/actionscript/org/as3kinect/events/: as3kinectCalibrationEvent.as  as3kinectSocketEvent.as  as3kinectWrapperEvent.as
wrappers/actionscript/org/as3kinect/objects/: PointWithID.as  as3kinectCalibrationParams.as  motorData.as
wrappers/actionscript/org/libfreenect/: libfreenect.as  libfreenectBlobs.as  libfreenectCamera.as  libfreenectData.as  libfreenectMotor.as  libfreenectSocket.as
wrappers/actionscript/org/libfreenect/events/: libfreenectCameraEvent.as  libfreenectSocketEvent.as
wrappers/actionscript/server/: as3-server.c  as3_jpeg.c  as3_jpeg.h  freenect_network.c  freenect_network.h
wrappers/c_sync/: CMakeLists.txt  README  freenect.pyx  freenect_sync.c  libfreenect_sync.c  libfreenect_sync.cpp  libfreenect_sync.h  setup.py
wrappers/cpp/: CMakeLists.txt  cpp_pc_view.cpp  cppview.cpp  libfreenect.hpp
wrappers/cppopencv/: CMakeLists.txt  cppopencv.cpp
wrappers/labview/: CMakeLists.txt  README  libfreenect_lv.c  libfreenect_lv.h
wrappers/labview/lvlib/: libfreenect.lvlib
wrappers/labview/lvlib/VIs/: example.vi  freenect lv start kinect.vi  get depth frame.vi  get image frame.vi  get tilt state mks.vi  get tilt state.vi  get_depth_imaq.vi  get_image_imaq.vi  set led.vi  set tilt degs.vi  stop.vi
wrappers/labview/lvlib/datatypes/: freenect_depth_format.ctl  freenect_led_options.ctl  freenect_raw_tilt_state.ctl  freenect_rgb_24bit.ctl  freenect_tilt_status_code.ctl  freenect_video_format.ctl
wrappers/opencv/: CMakeLists.txt  cvdemo.c  cvdemo.cpp  libfreenect_cv.c  libfreenect_cv.cpp  libfreenect_cv.h
wrappers/python/: CMakeLists.txt  README  demo_cv2_async.py  demo_cv2_sync.py  demo_cv2_sync_multi.py  demo_cv2_thresh_sweep.py  demo_cv2_threshold.py  demo_cv_async.py  demo_cv_depth_show.py  demo_cv_depth_sync_show.py  demo_cv_sync.py  demo_cv_sync_multi.py  demo_cv_thresh_sweep.py  demo_cv_threshold.py  demo_ipython.py  demo_mp_async.py  demo_mp_depth_show.py  demo_mp_rgb_show.py  demo_mp_sync.py  demo_sync_rgb_depth.py  demo_tilt.py  frame_convert.py  frame_convert2.py  freenect.c  freenect.pyx  freenect_synch.py  setup.py  tools.h
wrappers/python/cython/: README  demo_cv_depth_show.py  freenect.pyx  setup.py
wrappers/python/cython_sync/: README  demo_cv_depth_show.py  freenect.pyx  freenect_sync.pyx  setup.py
(+196 files in other folders)
